# Genwakai.github.io

./: 404.html  HowToEdit.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
assets/: extra.css
docs/: index.md
docs/news/: index.md
docs/news/posts/: concert-2026.md  site-release.md
news/: index.html
news/concert-2026/: index.html
news/site-release/: index.html
overrides/: blog-post.html  blog.html  home.html
overrides/partials/: copyright.html  header.html  post.html  toc.html
overrides/partials/languages/: ja_custom.html
plugins/: pyproject.toml
plugins/recent_posts/: plugin.py
search/: search_index.json
